@@ -18,6 +18,9 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static crfa.app.domain.SortBy.RELEASE_NUMBER;
+import static crfa.app.domain.SortOrder.ASC;
+
 @Controller("/dapps")
 @Slf4j
 public class DappsResource {
@@ -38,16 +41,18 @@ public class DappsResource {
     public List<DappReleaseResult> listDappReleases(@QueryValue Optional<SortBy> sortBy,
                                                     @QueryValue Optional<SortOrder> sortOrder) throws InvalidParameterException {
 
-        Cache<String, Float> releaseVersionsCache = dappService.buildMaxReleaseVersionCache();
+        var releaseVersionsCache = dappService.buildMaxReleaseVersionCache();
 
         return dappReleasesRepository.listDappReleases(sortBy, sortOrder)
                 .stream().map(dAppRelease -> {
                     var maxReleaseVersion = releaseVersionsCache.getIfPresent(dAppRelease.getId());
 
-                    return DappReleaseResult.builder()
+                    final var isLastVersion = dAppRelease.isLatestVersion(maxReleaseVersion);
+
+                    var b = DappReleaseResult.builder()
                             .scriptInvocationsCount(dAppRelease.getScriptInvocationsCount())
-                            .contractOpenSource(dAppRelease.getContractOpenSource())
-                            .contractAudited(dAppRelease.getAuditLink() != null)
+//                            .contractOpenSource(dAppRelease.getContractOpenSource())
+//                            .contractAudited(dAppRelease.getAuditLink() != null)
                             .category(dAppRelease.getCategory())
                             .subCategory(dAppRelease.getSubCategory())
                             .dAppType(dAppRelease.getDAppType())
@@ -63,15 +68,28 @@ public class DappsResource {
                             .releaseNumber(dAppRelease.getReleaseNumber())
                             .transactionsCount(dAppRelease.getTransactionsCount())
                             .scriptsLocked(dAppRelease.getScriptsLocked())
-                            .latestVersion(dAppRelease.isLatestVersion(maxReleaseVersion))
-                            .build();
-                }).collect(Collectors.toList());
+                            .latestVersion(isLastVersion);
+
+                    if (isLastVersion
+                            && dAppRelease.getContractOpenSource() != null
+                            && dAppRelease.getContractOpenSource()
+                            && dAppRelease.getContractLink() != null) {
+
+                        b.lastVersionContractsOpenSourcedLink(dAppRelease.getContractLink());
+                    }
+
+                    if (isLastVersion) {
+                        b.lastVersionContractsAuditedLink(dAppRelease.getAuditLink());
+                    }
+
+                    return b.build();
+                }).toList();
     }
 
     @Get(uri = "/find-release/{id}", produces = "application/json")
     public List<DappReleaseResult> findDappRelease(String id) {
         try {
-            return listDappReleases(Optional.of(SortBy.RELEASE_NUMBER), Optional.of(SortOrder.ASC))
+            return listDappReleases(Optional.of(RELEASE_NUMBER), Optional.of(ASC))
                     .stream()
                     .filter(dappReleaseResult -> dappReleaseResult.getId().equalsIgnoreCase(id))
                     .collect(Collectors.toList());
@@ -98,11 +116,13 @@ public class DappsResource {
                             .twitter(dapp.getTwitter())
                             .transactionsCount(dapp.getTransactionsCount())
                             .scriptsLocked(dapp.getScriptsLocked())
-                            .lastVersionContractsOpenSourced(dapp.getLastVersionOpenSourced())
-                            .lastVersionContractsAudited(dapp.getLastVersionAudited())
+                            .lastVersionContractsOpenSourced(dapp.getLastVersionOpenSourceLink() != null)
+                            .lastVersionContractsAudited(dapp.getLastVersionAuditLink() != null)
+                            .lastVersionContractsOpenSourcedLink(dapp.getLastVersionOpenSourceLink())
+                            .lastVersionContractsAuditedLink(dapp.getLastVersionAuditLink())
                             .updateTime(dapp.getUpdateTime())
                             .build();
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     @Get(uri = "/by-release-key/{releaseKey}", produces = "application/json")
